--- a/app/src/main/res/layout/rv_date_and_unread_notice_item.xml
+++ b/app/src/main/res/layout/rv_date_and_unread_notice_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true">
 
     <TextView
         android:id="@+id/noticeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:textAlignment="center"
         android:padding="16dp"/>
 
 </RelativeLayout>
