--- a/app/src/main/res/layout/rv_chat_item.xml
+++ b/app/src/main/res/layout/rv_chat_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginTop="4dp">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -26,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toEndOf="@id/authorAvatar"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:id="@+id/authorName"
             android:layout_centerVertical="true"
             android:gravity="center_vertical"
@@ -36,7 +35,6 @@
 
     <include layout="@layout/item_message_quote"
         android:layout_below="@id/authorLayout"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
         android:layout_height="wrap_content"
@@ -47,7 +45,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:layout_marginTop="4dp"
         android:layout_alignParentStart="true"
         android:scaleType="fitCenter"
         android:layout_below="@id/quotedMessageLayout"
@@ -60,6 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
+        android:textSize="12sp"
         android:id="@+id/chatMessage"
         android:layout_below="@id/previewImage"
         tools:text="Just another chat message"/>
@@ -69,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@id/chatMessage"
-        android:textSize="12sp"
+        android:textSize="10sp"
         android:id="@+id/messageTime"
         android:layout_marginEnd="8dp"
         tools:text="12:30"/>
