--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,7 +62,7 @@
 
     <style name="appActionBarPopupMenu" parent="@style/Widget.AppCompat.PopupMenu.Overflow">
         <item name="android:colorPrimary">@color/fg_inverse</item>
-        <item name="android:background">@color/bg_alt</item>
+        <item name="android:background">@color/fg_inverse</item>
         <item name="android:textColor">@color/nc_incoming_text_default</item>
     </style>
 
