Toolbar click & autolinking
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="8dp"
+        android:autoLink="all"
         android:layout_toStartOf="@id/cancelReplyButton"
         android:id="@+id/quotedChatText"
         android:textSize="12sp"
