--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -1,100 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/quotedMessageLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp">
 
     <View
         android:id="@+id/quoteColoredView"
         android:layout_width="2dp"
         android:layout_height="match_parent"
         android:layout_alignTop="@id/quotedTextLayout"
-        android:layout_alignParentStart="true"
         android:layout_alignBottom="@id/quotedTextLayout"
+        android:layout_alignParentStart="true"
         android:layout_marginEnd="4dp"
-        android:background="@color/colorPrimary"
-        />
+        android:background="@color/colorPrimary" />
 
     <RelativeLayout
+        android:id="@+id/quotedTextLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/quotedTextLayout"
         android:layout_toStartOf="@id/cancelReplyButton"
-        android:layout_marginEnd="8dp"
         android:layout_toEndOf="@id/quoteColoredView">
 
-        <RelativeLayout
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/quotedUserAvatar"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="8dp"
+            app:shapeAppearanceOverlay="@style/circleImageView"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/quotedAuthor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:id="@+id/quotedAuthorLayout">
+            android:layout_alignBaseline="@id/quotedUserAvatar"
+            android:layout_toEndOf="@id/quotedUserAvatar"
+            android:textSize="14sp"
+            tools:text="Another user" />
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/quotedUserAvatar"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="8dp"
-                app:shapeAppearanceOverlay="@style/circleImageView"
-                tools:srcCompat="@tools:sample/avatars" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toEndOf="@id/quotedUserAvatar"
-                android:textSize="14sp"
-                android:id="@+id/quotedAuthor"
-                android:layout_alignBaseline="@id/quotedUserAvatar"
-                tools:text="Another user"/>
-
-        </RelativeLayout>
 
         <ImageView
             android:id="@+id/quotedPreviewImage"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/quotedAuthorLayout"
+            android:layout_below="@id/quotedAuthor"
+            android:layout_alignStart="@id/quotedAuthor"
             android:adjustViewBounds="true"
-            android:layout_alignParentStart="true"
-            android:scaleType="fitCenter"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            tools:src="@tools:sample/backgrounds/scenic"/>
+            android:maxHeight="96dp"
+            android:scaleType="fitStart"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
         <androidx.emoji.widget.EmojiTextView
+            android:id="@+id/quotedChatText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:autoLink="all"
-            android:id="@+id/quotedChatText"
-            android:textSize="12sp"
+            android:layout_alignStart="@id/quotedAuthor"
             android:layout_below="@id/quotedPreviewImage"
-            tools:text="Just another chat message"/>
+            android:autoLink="all"
+            android:textSize="12sp"
+            tools:text="Just another chat message" />
 
         <TextView
+            android:id="@+id/quotedMessageTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_below="@id/quotedChatText"
-            android:textSize="10sp"
+            android:layout_alignParentEnd="true"
             android:textAlignment="textEnd"
-            android:id="@+id/quotedMessageTime"
-            tools:text="12:30"/>
+            android:textSize="10sp"
+            tools:text="12:30" />
 
     </RelativeLayout>
 
 
     <ImageButton
+        android:id="@+id/cancelReplyButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:layout_centerVertical="true"
-        android:layout_marginHorizontal="8dp"
         android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
         android:background="@drawable/ic_cancel_black_24dp"
         android:backgroundTint="@color/grey_600"
-        android:id="@+id/cancelReplyButton"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
