--- a/app/src/main/res/layout/rv_chat_item.xml
+++ b/app/src/main/res/layout/rv_chat_item.xml
@@ -42,11 +42,11 @@
 
     <ImageView
         android:id="@+id/previewImage"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_alignParentStart="true"
-        android:scaleType="fitCenter"
+        android:scaleType="fitStart"
         android:layout_below="@id/quotedMessageLayout"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="8dp"
