--- a/app/src/main/res/layout/rv_chat_item.xml
+++ b/app/src/main/res/layout/rv_chat_item.xml
@@ -42,7 +42,7 @@
 
     <ImageView
         android:id="@+id/previewImage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:layout_alignParentStart="true"
