--- a/app/src/main/res/layout/view_message_input.xml
+++ b/app/src/main/res/layout/view_message_input.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">
+    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:animateLayoutChanges="true">
         <include layout="@layout/item_message_quote"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
