Fix issue with recyclerview scrolling
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/layout/controller_chat.xml
+++ b/app/src/main/res/layout/controller_chat.xml
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/separator"
+        android:focusable="true"
         android:id="@+id/messagesRecyclerView"/>
 
     <View
