--- a/app/src/main/res/layout/contacts_list_view.xml
+++ b/app/src/main/res/layout/contacts_list_view.xml
@@ -25,6 +25,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:focusable="true"
         android:clipToPadding="false"
         android:layout_below="@id/divider"
         android:paddingBottom="64dp"
