Fix status bar color
Signed-off-by: Mario Danic <mario@lovelyhq.com>

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -23,6 +23,7 @@
 
 <resources>
     <bool name="is_night">true</bool>
+    <bool name="status_bar_light">false</bool>
 
     <color name="conversation_item_header">#9FBDCC</color>
     <!--<color name="conversation_item_header">#CFCFCF</color>-->
