--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -5,7 +5,8 @@
     android:id="@+id/quotedMessageLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp">
+    android:clipToPadding="true"
+    android:layout_marginVertical="2dp">
 
     <View
         android:id="@+id/quoteColoredView"
