--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -62,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@id/quotedAuthor"
             android:layout_below="@id/quotedPreviewImage"
+            android:textIsSelectable="false"
             android:autoLink="all"
             android:textSize="14sp"
             tools:text="Just another chat message" />
