Status bar and navigation bar theming
Misc fixes for UI elements to bring them inline with the status bar and
nav bar colours.

Signed-off-by: Daniel Bailey <daniel.bailey@grappleIT.co.uk>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@color/transparent"
+        android:background="@color/bg_default"
         android:elevation="0dp"
         android:clipChildren="true"
         android:clipToPadding="false"
@@ -46,8 +46,6 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/transparent"
-            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
             app:contentInsetStartWithNavigation="0dp"
             app:layout_scrollFlags="enterAlwaysCollapsed|noScroll"
             app:popupTheme="@style/appActionBarPopupMenu">
