--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -30,6 +30,10 @@
 
     <color name="bg_default">#222222</color>
     <color name="bg_alt">#222222</color>
+    <color name="bg_inverse">@color/grey950</color>
+
+    <color name="fg_default">#FFFFFF</color>
+    <color name="fg_inverse">#222222</color>
 
     <!-- Chat window incoming message text & informational -->
     <color name="nc_incoming_text_default">#D8D8D8</color>
@@ -41,7 +45,6 @@
     <color name="bg_selected_participant_clear_icon">#EFEFEF</color>
     <color name="bg_message_list_incoming_bubble">#484848</color>
     <color name="bg_message_list_outcoming_bubble">#003F62</color>
-    <color name="fg_inverse">#222222</color>
 
     <color name="emoji_background">#313031</color>
     <color name="emoji_divider">#15FFFFFF</color>
