--- a/app/src/main/res/layout/contacts_list_view.xml
+++ b/app/src/main/res/layout/contacts_list_view.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true">
+    android:animateLayoutChanges="true"
+    android:background="@color/bg_default">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/selectedParticipantsRecyclerView"
