--- a/app/src/main/res/layout/controller_entry_menu.xml
+++ b/app/src/main/res/layout/controller_entry_menu.xml
@@ -35,7 +35,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="12dp"
         android:alpha="0.7"
-        android:background="#0000"
+        android:background="@color/bg_default"
         android:enabled="false"
         android:text="@string/nc_proceed"
         android:textColor="@color/colorPrimary" />
