--- a/app/src/main/res/layout/message_state.xml
+++ b/app/src/main/res/layout/message_state.xml
@@ -43,6 +43,7 @@
         android:textAlignment="center"
         android:text="@string/nc_conversations_empty"
         android:textSize="16sp"
+        android:textColor="@color/fg_default"
         />
 
 </RelativeLayout>
