--- a/app/src/main/res/layout/rv_item_app.xml
+++ b/app/src/main/res/layout/rv_item_app.xml
@@ -22,7 +22,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/white"
+    android:background="@color/bg_default"
     android:paddingTop="16dp"
     android:paddingBottom="16dp">
 
@@ -46,7 +46,7 @@
         android:layout_toEndOf="@id/icon_image_view"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:textColor="@color/black"
+        android:textColor="@color/fg_default"
         android:textSize="16sp"
         tools:text="Start a new conversation" />
 
