--- a/app/src/main/res/layout/rv_item_browser_file.xml
+++ b/app/src/main/res/layout/rv_item_browser_file.xml
@@ -21,8 +21,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/double_margin_between_elements"
-    android:background="@color/bg_default">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="@dimen/double_margin_between_elements">
 
     <CheckBox
         android:id="@+id/selectFileCheckbox"
@@ -42,7 +42,7 @@
         android:layout_below="@id/file_icon"
         android:layout_alignEnd="@id/file_icon"
         android:src="@drawable/ic_star_black_24dp"
-        android:tint="@color/grey_600" />
+        app:tint="@color/grey_600" />
 
     <ImageView
         android:id="@+id/fileEncryptedImageView"
