--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,11 +57,12 @@
     <color name="emoji_icons">#61000000</color>
     <color name="emoji_divider">#15000000</color>
 
-    <color name="fg_default">#000000</color>
+    <color name="fg_default">#666666</color>
     <color name="fg_inverse">#FFFFFF</color>
 
     <color name="bg_default">#FFFFFF</color>
     <color name="bg_alt">@color/white60</color>
+    <color name="bg_inverse">@color/grey950</color>
     <color name="nc_chip_mention_you_background">#0083C9</color>
     <color name="nc_chip_mention_others_background">@color/white</color>
     <color name="bg_dark_mention_chips">#333333</color>
