Improves visiblity of text and URLs in chat view.
Signed-off-by: Daniel Bailey <daniel.bailey@grappleIT.co.uk>

--- a/app/src/main/res/layout/item_message_quote.xml
+++ b/app/src/main/res/layout/item_message_quote.xml
@@ -65,6 +65,7 @@
             android:textIsSelectable="false"
             android:autoLink="all"
             android:textSize="14sp"
+            android:textColorLink="@color/colorPrimary"
             tools:text="Just another chat message" />
 
         <TextView
