--- a/app/src/main/res/layout/rv_chat_item.xml
+++ b/app/src/main/res/layout/rv_chat_item.xml
@@ -74,6 +74,8 @@
             android:layout_marginHorizontal="8dp"
             android:id="@+id/chatMessage"
             android:autoLink="all"
+            android:textColor="@color/fg_chat_message_sent"
+            android:textColorLink="@color/colorPrimary"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
             app:layout_wrapBefore="true"
